--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -67,10 +67,11 @@
         android:text="Name"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintVertical_bias="0.377" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
