--- a/app/src/main/res/layout/activity_ingredient.xml
+++ b/app/src/main/res/layout/activity_ingredient.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="181dp"
         android:fontFamily="sans-serif-condensed"
         android:text="Ingredients"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
