--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddRecipe">
+    tools:context=".Edit">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,66 +56,58 @@
                     android:id="@+id/name"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:hint="Recipe Name"
                     android:layout_marginStart="40dp"
+                    android:layout_marginTop="10dp"
                     android:inputType="text"
-                    android:maxEms="20"
-                    android:layout_marginTop="10dp">
-                </EditText>
+                    android:maxEms="20"></EditText>
 
                 <EditText
                     android:id="@+id/time"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:hint="Estimate cooking time"
                     android:layout_marginStart="40dp"
-                    android:inputType="text"
+                    android:layout_marginTop="10dp"
                     android:ems="3"
-                    android:layout_marginTop="10dp">
-                </EditText>
+                    android:inputType="text"></EditText>
 
                 <EditText
                     android:id="@+id/ing"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:hint="Ingredient"
                     android:layout_marginStart="40dp"
-                    android:inputType="textMultiLine"
-                    android:layout_marginTop="10dp">
-                </EditText>
+                    android:layout_marginTop="10dp"
+                    android:inputType="textMultiLine"></EditText>
 
                 <EditText
                     android:id="@+id/des"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:hint="Description"
                     android:layout_marginStart="40dp"
-                    android:inputType="textMultiLine"
-                    android:layout_marginTop="10dp">
-                </EditText>
+                    android:layout_marginTop="10dp"
+                    android:inputType="textMultiLine"></EditText>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="140dp"
                     android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/cancel"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="Cancel"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="30dp">
+                    <Button
+                        android:id="@+id/cancel"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"
+                        android:layout_marginStart="60dp"
+                        android:layout_marginTop="30dp">
 
-                </Button>
+                    </Button>
 
                     <Button
                         android:id="@+id/update"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
-                        android:text="Add Recipe"
                         android:layout_marginStart="70dp"
-                        android:layout_marginTop="30dp">
+                        android:layout_marginTop="30dp"
+                        android:text="Update">
 
                     </Button>
 
